<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/affdexme_menu"
    android:background="@color/transparent_overlay"
    android:visibility="invisible"
    >
    <View
        android:id="@+id/menu_border"
        android:layout_width="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="1dp"
        android:background="@color/letter_gray"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_border"
        android:id="@+id/menu_table_layout"
        android:stretchColumns="0,1">
        <TableRow>
            <CheckBox
                style="@style/optionsStyle"
                android:layout_gravity="center"
                android:text="@string/show_fps"
                android:id="@+id/fps_checkbox"
                android:onClick="fps_checkbox_click"
                />
            <CheckBox
                style="@style/optionsStyle"
                android:layout_gravity="center"
                android:text="@string/show_tracking"
                android:id="@+id/tracking_checkbox"
                android:onClick="tracking_checkbox_click"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/menu_table_layout">
        <TextView
            style="@style/optionsStyle"
            android:text="@string/processed_frames_per_second"
            android:id="@+id/fps_edittext_name"
            />
        <EditText
            style="@style/optionsStyle"
            android:inputType="number"
            android:ems="3"
            android:maxLength="2"
            android:id="@+id/fps_edittext"
            android:imeOptions="actionDone" />
    </LinearLayout>

</RelativeLayout>